تغيير اسم مشروع الدوماين حذف المشروع السابق تصحيح الاعتمادية في المشاريع الاخرى

--- a/HotelHub.Domain/HotelHub.Domain.csproj
+++ b/HotelHub.Domain/HotelHub.Domain.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary1\HotelHub.Domain.csproj" />
-    <ProjectReference Include="..\HotelHub.Domain\HotelHub.Domain.csproj" />
+    <Folder Include="Entities\" />
   </ItemGroup>
 
 </Project>
