--- a/HotelWebUI/HotelWebUI.csproj
+++ b/HotelWebUI/HotelWebUI.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ClassLibrary1\HotelHub.Domain.csproj" />
+    <ProjectReference Include="..\HotelHub.Domain\HotelHub.Domain.csproj" />
     <ProjectReference Include="..\HotelHub.persistance\HotelHub.persistance.csproj" />
     <ProjectReference Include="..\HotelHub.Serviceinterfaces\HotelHub.Serviceinterfaces.csproj" />
     <ProjectReference Include="..\HotelHub.Service\HotelHub.Service.csproj" />
